fix word wrap in challenges detail, background for code blocks

--- a/client/src/routes/challenges/style.sass
+++ b/client/src/routes/challenges/style.sass
@@ -62,6 +62,16 @@
       @media (max-width: 576px)
         grid-template-columns: 1fr 1fr
         
+// fix thanks tian
+.details
+  word-break: break-all
+  word-wrap: break-word
+  pre
+    white-space: pre-wrap
+    white-space: -moz-pre-wrap
+    white-space: -pre-wrap
+    white-space: -o-pre-wrap
+    word-wrap: break-word
 
 .files_container
   .file_link
