--- a/client/src/style/_common.sass
+++ b/client/src/style/_common.sass
@@ -19,11 +19,17 @@ button
     cursor: pointer
     background: darken($secondary, 5%)
 
+pre
+  font-family: 'Source Code Pro'
+  background: rgba(10,10,18,0.8)
+  padding: 8px 10px
+  border-radius: 3px
+
 code
   font-family: 'Source Code Pro'
   background: rgba(10,10,18,0.8)
   padding: 1px 3px
-  border-radius: 2px
+  border-radius: 3px
 
 a
   color: $primary
